--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,7 @@ torch>=2.0.0
 open-clip-torch>=2.24.0
 pypdf>=4.0.0
 beautifulsoup4>=4.13.3
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+pydantic>=2.0.0
+python-multipart
